# SUGIRA

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
docs/: 1.git-basics.md  2.git-flow.md  3.poetry.md  4.python-clean-code.md  background.html
sugira/: core.py  gui.py
sugira/engine/: input.py  intensity.py  plot.py  plot_plan_view.py  reflections.py  w_channel_pre.py
sugira/utils/: audio_stack.py  embed_files.py  export_data.py  filters.py  formatter.py  read_aformat.py
test/arthur-sykes-rymer-auditorium-university-york/: Read Me.txt
test/central-hall-university-york/: Read Me.txt
