[tool.poetry]
name = "sugira"
version = "0.1.0"
description = ""
authors = ["francobach47 <francobach47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
soundfile = "^0.12.1"
scipy = "^1.12.0"
plotly = "^5.19.0"
pandas = "^2.2.1"
matplotlib = "^3.9.0"
pyqt5-qt5 = "5.15.2"
pyqtwebengine = "5.15.3"
qtpy = "^2.4.1"
pyqt5 = "^5.15.10"
pyqtwebkit = "^5.15.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
pylint = "^3.1.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"